[gd_scene load_steps=12 format=2]

[ext_resource path="res://game/Enemy.gd" type="Script" id=1]
[ext_resource path="res://icons/enemy.png" type="Texture" id=2]
[ext_resource path="res://icons/enemyparticle.png" type="Texture" id=3]
[ext_resource path="res://game/ParticlesEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/shot.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/enemydeath.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.985185, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.481481, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 115.29
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 960.06, 519.088 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="deathParticles" type="Particles2D" parent="."]
position = Vector2( -0.109009, -0.247864 )
scale = Vector2( 0.4, 0.4 )
emitting = false
amount = 700
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="Particles2D" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.109009, -0.247864 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="enemyDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="enemyShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -17.166
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
